--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -244,11 +244,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M2S-Df-CVS">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Session ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M2S-Df-CVS">
                                 <rect key="frame" x="128.66666666666669" y="416" width="156.66666666666669" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfL-Bz-nkg">
                                 <rect key="frame" x="17.666666666666671" y="416" width="81" height="30"/>
@@ -257,10 +257,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cFx-Vu-iVa">
-                                <rect key="frame" x="182.66666666666666" y="466" width="49" height="30"/>
-                                <state key="normal" title="Submit"/>
+                                <rect key="frame" x="179.66666666666666" y="466" width="55" height="30"/>
+                                <state key="normal" title="Sign Up"/>
                                 <connections>
-                                    <segue destination="hKQ-ak-qLP" kind="presentation" id="2gV-si-XbN"/>
+                                    <action selector="onSubmitTouchDown:" destination="9KN-Cl-dz1" eventType="touchDown" id="Np4-pT-EgC"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -374,20 +374,15 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="hTk-uQ-Tvy">
-                        <barButtonItem key="leftBarButtonItem" title="Exit" id="QoV-CW-5Or">
-                            <connections>
-                                <segue destination="BYZ-38-t0r" kind="presentation" id="Dj2-9O-ot8"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="leftBarButtonItem" title="Exit" id="QoV-CW-5Or"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="studentSessionIdOutlet" destination="M2S-Df-CVS" id="BcR-6K-m5d"/>
-                        <outlet property="studentSessionSubmitOutlet" destination="cFx-Vu-iVa" id="gL9-mT-dMT"/>
+                        <outlet property="txt_sessionId" destination="M2S-Df-CVS" id="oAg-9s-mEu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BGw-sY-Dcg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1087" y="413"/>
+            <point key="canvasLocation" x="1120" y="380"/>
         </scene>
         <!--Tutor Lectures View Controller-->
         <scene sceneID="JSe-rn-JUL">
@@ -415,7 +410,7 @@
                                         <rect key="frame" x="0.0" y="28" width="374" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="center" tableViewCell="0UL-ep-NaO" id="gPH-Ho-aD0">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMH-TS-ncQ">
@@ -745,10 +740,10 @@
                                 <exclude reference="ksS-U0-7ll"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="j2L-UE-Nh4"/>
-                                <exclude reference="ooL-Fh-w7u"/>
                                 <exclude reference="7eL-Ve-WSF"/>
                                 <exclude reference="GbK-M7-qBF"/>
+                                <exclude reference="j2L-UE-Nh4"/>
+                                <exclude reference="ooL-Fh-w7u"/>
                                 <exclude reference="b8D-CZ-5lG"/>
                                 <exclude reference="e4I-A6-rFO"/>
                                 <exclude reference="14V-GB-Hie"/>
@@ -769,10 +764,10 @@
                                 <include reference="ksS-U0-7ll"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="j2L-UE-Nh4"/>
-                                <include reference="ooL-Fh-w7u"/>
                                 <include reference="7eL-Ve-WSF"/>
                                 <include reference="GbK-M7-qBF"/>
+                                <include reference="j2L-UE-Nh4"/>
+                                <include reference="ooL-Fh-w7u"/>
                                 <include reference="b8D-CZ-5lG"/>
                                 <include reference="e4I-A6-rFO"/>
                                 <include reference="14V-GB-Hie"/>
@@ -793,10 +788,10 @@
                                 <include reference="ksS-U0-7ll"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="j2L-UE-Nh4"/>
-                                <include reference="ooL-Fh-w7u"/>
                                 <include reference="7eL-Ve-WSF"/>
                                 <include reference="GbK-M7-qBF"/>
+                                <include reference="j2L-UE-Nh4"/>
+                                <include reference="ooL-Fh-w7u"/>
                                 <include reference="b8D-CZ-5lG"/>
                                 <include reference="e4I-A6-rFO"/>
                                 <include reference="14V-GB-Hie"/>
@@ -817,10 +812,10 @@
                                 <include reference="ksS-U0-7ll"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="j2L-UE-Nh4"/>
-                                <include reference="ooL-Fh-w7u"/>
                                 <include reference="7eL-Ve-WSF"/>
                                 <include reference="GbK-M7-qBF"/>
+                                <include reference="j2L-UE-Nh4"/>
+                                <include reference="ooL-Fh-w7u"/>
                                 <include reference="b8D-CZ-5lG"/>
                                 <include reference="e4I-A6-rFO"/>
                                 <include reference="14V-GB-Hie"/>
@@ -841,10 +836,10 @@
                                 <include reference="ksS-U0-7ll"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="j2L-UE-Nh4"/>
-                                <include reference="ooL-Fh-w7u"/>
                                 <include reference="7eL-Ve-WSF"/>
                                 <include reference="GbK-M7-qBF"/>
+                                <include reference="j2L-UE-Nh4"/>
+                                <include reference="ooL-Fh-w7u"/>
                                 <include reference="b8D-CZ-5lG"/>
                                 <include reference="e4I-A6-rFO"/>
                                 <include reference="14V-GB-Hie"/>
@@ -922,9 +917,6 @@
                                         <include reference="TlF-Ba-rWJ"/>
                                     </mask>
                                 </variation>
-                                <connections>
-                                    <action selector="StudentLectureRedButtonAction:" destination="FFr-B7-ubx" eventType="touchUpInside" id="fxc-IS-PXM"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1031,9 +1023,6 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="b8D-Lt-8R6"/>
-                    <connections>
-                        <outlet property="StudentLectureRedButtonOutlet" destination="crS-rf-qPy" id="WKg-N3-yQC"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EBR-Wg-heT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1052,14 +1041,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HZo-J7-8Zz">
-                                <rect key="frame" x="20" y="20" width="374" height="716"/>
+                                <rect key="frame" x="20" y="64" width="374" height="672"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextEntry" id="6fP-xp-P4u">
                                         <rect key="frame" x="0.0" y="28" width="374" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6fP-xp-P4u" id="fg4-NO-q0o">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pWD-T5-qFb">
@@ -1205,8 +1194,7 @@
         <image name="ResetButton" width="200" height="100"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="mQf-ER-uZz"/>
-        <segue reference="MZD-ty-dhz"/>
+        <segue reference="mx1-J2-a0S"/>
         <segue reference="hSd-vf-tLl"/>
     </inferredMetricsTieBreakers>
 </document>
