--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -384,7 +384,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BGw-sY-Dcg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="949" y="413"/>
+            <point key="canvasLocation" x="923" y="461"/>
         </scene>
         <!--Tutor Lectures View Controller-->
         <scene sceneID="JSe-rn-JUL">
@@ -412,11 +412,15 @@
                                         <rect key="frame" x="0.0" y="28" width="374" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qG9-ib-pgT" id="7ar-Ea-aZb">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="ufv-Nf-glt" id="l5f-iK-eS0"/>
+                                    <outlet property="delegate" destination="ufv-Nf-glt" id="8S8-Hb-DJk"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -492,7 +496,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="udn-lu-foc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="947.82608695652186" y="1162.5"/>
+            <point key="canvasLocation" x="922" y="1123"/>
         </scene>
         <!--Tutor Lecture Status View Controller-->
         <scene sceneID="MkB-yA-uzh">
@@ -688,7 +692,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nsv-ON-5Sh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1719" y="1163"/>
+            <point key="canvasLocation" x="1690" y="1461"/>
         </scene>
         <!--Student Session View Controller-->
         <scene sceneID="5Lz-ZP-23m">
@@ -856,7 +860,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EBR-Wg-heT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1720" y="413"/>
+            <point key="canvasLocation" x="1690" y="461"/>
         </scene>
         <!--Tutor Create Lecture View Controller-->
         <scene sceneID="tE4-3d-R2n">
@@ -878,7 +882,7 @@
                                         <rect key="frame" x="0.0" y="28" width="374" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TX9-fy-S6y" id="Ifr-F5-ogZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -886,11 +890,15 @@
                                         <rect key="frame" x="0.0" y="72" width="374" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="T5U-Qh-Vz4" id="6N7-Ob-01o">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="99"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="N1y-Hw-fIm" id="lZw-YF-lUs"/>
+                                    <outlet property="delegate" destination="N1y-Hw-fIm" id="mre-zB-esu"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -903,12 +911,16 @@
                     </view>
                     <navigationItem key="navigationItem" id="8m4-Rn-tD7">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="3Rn-MB-rfJ"/>
-                        <barButtonItem key="rightBarButtonItem" title="Create" id="KcH-ge-CGm"/>
+                        <barButtonItem key="rightBarButtonItem" title="Create" id="KcH-ge-CGm">
+                            <connections>
+                                <segue destination="9xR-Xk-1pM" kind="show" id="2w1-ZV-79Z"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9t5-BG-xCf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1719" y="1914"/>
+            <point key="canvasLocation" x="922" y="1815"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5DZ-co-GQH">
@@ -926,7 +938,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2r6-v6-C4Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="199" y="413"/>
+            <point key="canvasLocation" x="199" y="462"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="odD-IT-tJA">
@@ -944,11 +956,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pC9-eG-O9u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="199" y="1163"/>
+            <point key="canvasLocation" x="199" y="1123"/>
         </scene>
     </scenes>
     <resources>
         <image name="RedButton" width="100" height="100"/>
         <image name="ResetButton" width="200" height="100"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="2w1-ZV-79Z"/>
+    </inferredMetricsTieBreakers>
 </document>
